fixes spacing for position names

--- a/style.less
+++ b/style.less
@@ -13,6 +13,10 @@ body#politiko {
 	// background-color: #444;
 }
 
+.position-name {
+  margin: 32px 0px 16px 0px;
+}
+
 .highlight {
 	color: white;
 }
@@ -133,7 +137,6 @@ div.choice {
 }
 
 .candidate-list {
-	margin-top: 40px;
 	border: 1px solid #ddd;
 	border-radius: 4px;
 	li.candidate {
